
[tool.poetry]
name = "gymnax"
version = "0.0.8"
description = "JAX-compatible version of Open AI's gym environments"
authors = ["Robert Tjarko Lange <robertlange0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
jax = ">=0.4.20"
jaxlib = ">0.4.20"
pyyaml = "^6.0.2"
gym = ">=0.26"
gymnasium = ">=0.28"
matplotlib = ">=3.0"
seaborn = "^0.13.2"
chex = ">=0.1.0"
flax = ">=0.7.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
bsuite = "^0.3.5"
minatar = "^1.0.15"
brax = "^0.12.1"
black = "^25.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
